--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.10.4",
     "firebase": "^10.14.1",
     "framer-motion": "^12.9.2",
+    "mapbox-gl": "^3.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
