--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
+    "@react-leaflet/core": "^2.1.0",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.15.11",
     "@types/node": "20.10.4",
     "firebase": "^10.14.1",
     "framer-motion": "^12.9.2",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.1",
+    "pigeon-maps": "^0.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1",
     "three": "^0.176.0"
   },
